syntax = "proto3";

option csharp_namespace = "Microservicio.Autenticacion";

service AuthService {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc ValidateToken (TokenRequest) returns (TokenReply);
  rpc SendPasswordByEmail (PasswordRecoveryRequest) returns (PasswordRecoveryReply);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
  string message = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenReply {
  bool is_valid = 1;
  string username = 2;
}

message PasswordRecoveryRequest {
  string username = 1;
}

message PasswordRecoveryReply {
  bool success = 1;
  string message = 2;
}